// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button button is danger 1`] = `
<div>
  <button
    class="px-6 py-1.5 border rounded transition-all duration-300 text-rose-600 border-rose-600 hover:opacity-80"
    type="button"
  />
</div>
`;

exports[`Button button is disabled 1`] = `
<div>
  <button
    class="px-6 py-1.5 border rounded transition-all duration-300 disabled:text-slate-400 disabled:bg-slate-100 disabled:border-slate-200"
    disabled=""
    type="button"
  />
</div>
`;

exports[`Button button is link 1`] = `
<div>
  <button
    class="px-6 py-1.5 border rounded transition-all duration-300 border-transparent"
    type="button"
  />
</div>
`;

exports[`Button button is primary 1`] = `
<div>
  <button
    class="px-6 py-1.5 border rounded transition-all duration-300 text-white border-orange-400 bg-orange-400 hover:bg-white hover:text-orange-400"
    type="button"
  />
</div>
`;

exports[`Button button is primary disabled 1`] = `
<div>
  <button
    class="px-6 py-1.5 border rounded transition-all duration-300 disabled:text-slate-400 disabled:bg-slate-100 disabled:border-slate-200"
    disabled=""
    type="button"
  />
</div>
`;

exports[`Button renders button 1`] = `
<div>
  <button
    class="px-6 py-1.5 border rounded transition-all duration-300 hover:text-orange-400 hover:border-orange-400"
    type="button"
  />
</div>
`;
